[gd_scene load_steps=3 format=3 uid="uid://dyrlkdvs84rch"]

[ext_resource type="Script" path="res://main.gd" id="1_jag5g"]
[ext_resource type="Script" path="res://Camera2D.gd" id="2_gbm5y"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jag5g")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 10000.0
offset_bottom = 10000.0

[node name="Prey" type="Node2D" parent="."]

[node name="Predator" type="Node2D" parent="."]

[node name="Food" type="Node2D" parent="."]

[node name="FoodTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1174, 944)
zoom = Vector2(0.25, 0.25)
limit_smoothed = true
script = ExtResource("2_gbm5y")

[node name="PreyLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = -1237.0
offset_right = 221.0
offset_bottom = -1211.0
scale = Vector2(24, 24)
text = "Prey:"

[node name="PreySlider" type="HSlider" parent="PreyLabel"]
layout_mode = 0
offset_left = 111.0
offset_top = 5.0
offset_right = 394.0
offset_bottom = 21.0
editable = false

[node name="PredatorLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = -1813.0
offset_right = 221.0
offset_bottom = -1787.0
scale = Vector2(24, 24)
text = "Predator:"

[node name="PredatorSlider" type="HSlider" parent="PredatorLabel"]
layout_mode = 0
offset_left = 111.0
offset_top = 5.0
offset_right = 394.0
offset_bottom = 21.0
editable = false

[node name="FoodLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = -696.0
offset_right = 224.0
offset_bottom = -670.0
scale = Vector2(24, 24)
text = "Food:"

[node name="FoodSlider" type="HSlider" parent="FoodLabel"]
layout_mode = 0
offset_left = 110.0
offset_top = 5.0
offset_right = 394.0
offset_bottom = 21.0
editable = false

[connection signal="timeout" from="FoodTimer" to="." method="_on_food_timer_timeout"]
